--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ camera.attachControl(canvas, true);
     // Our built-in 'ground' shape.
     var ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 6, height: 6}, scene);
 const groundMaterial = new BABYLON.StandardMaterial("Ground Material", scene);
-groundMaterial.diffuseColor = BABYLON.Color3.Red();
+groundMaterial.diffuseColor = BABYLON.Color3.green();
 let groundTexture = new BABYLON.Texture(Assets.textures.checkerboard_basecolor_png.path, scene);
 groundMaterial.diffuseTexture = groundTexture;
 ground.material = groundMaterial;
